# QuizSystemSchoolProject

./: .gitignore  UML_project.vpp  readme.md
UML/: UML_project - Copy.vpp  UML_project.vpp
src/: CMakeLists.txt  auth.cpp  main.cpp  quiz_system.cpp  test.cpp  test_menu.cpp  test_selector.cpp
src/auth/: auth.cpp  control.cpp  ui.cpp
src/control/: auth.cpp  control.cpp
src/control/test/: test.cpp
src/control/test_menu/: student.cpp  teacher.cpp  test_menu.cpp
src/control/test_selector/: student.cpp  teacher.cpp
src/database/: database_student_answers.txt  database_test.txt  database_user.txt  test.cpp  user.cpp
src/headers/: auth.h  quiz_system.h  test.h  test_menu.h  test_selector.h
src/headers/auth/: auth.h  control.h  ui.h
src/headers/control/: auth.h  control.h
src/headers/control/test/: edit_action_type.h  editor.h  review_action_type.h  reviewer.h  take_action_type.h  taker.h  test.h
src/headers/control/test_menu/: option_type.h  student.h  teacher.h  test_menu.h
src/headers/control/test_selector/: option_type.h  student.h  teacher.h  test_selector.h
src/headers/database/: test.h  user.h
src/headers/shared/: account_type.h  answer_data.h  auth.h  database.h  quiz_system.h  test.h  test_data.h  test_manager.h  test_menu.h  test_selector.h  user_data.h  user_manager.h
src/headers/test_data/: answer.h  answers.h  question.h  test_data.h
src/headers/test_management/: answer_data.h  test.h  test_data.h  test_menu.h  test_menu_control.h  test_menu_control_student.h  test_menu_control_teacher.h  test_menu_option_type.h  test_menu_ui.h  test_menu_ui_student.h  test_menu_ui_teacher.h
src/headers/test_selection/: test_selector.h  test_selector_control.h  test_selector_control_student.h  test_selector_control_teacher.h  test_selector_ui.h  test_selector_ui_student.h  test_selector_ui_teacher.h
src/headers/ui/: auth.h  test.h  ui.h
src/headers/ui/test/: test.h
src/headers/ui/test_menu/: student.h  teacher.h  test_menu.h
src/headers/ui/test_selector/: student.h  teacher.h  test_selector.h
src/shared/: account_type.cpp  answer_data.cpp  auth.cpp  database.cpp  quiz_system.cpp  test.cpp  test_data.cpp  test_manager.cpp  test_menu.cpp  test_selector.cpp  user_data.cpp  user_manager.cpp
src/test_data/: test_data.cpp
src/test_management/: answer_data.cpp  test.cpp  test_data.cpp  test_menu.cpp  test_menu_control.cpp  test_menu_control_student.cpp  test_menu_control_teacher.cpp  test_menu_ui.cpp  test_menu_ui_student.cpp  test_menu_ui_teacher.cpp
src/test_selection/: test_selector.cpp  test_selector_control_student.cpp  test_selector_control_teacher.cpp  test_selector_ui_student.cpp  test_selector_ui_teacher.cpp
src/tests/: database.cpp
src/ui/: auth.cpp  student (2).cpp  student.cpp  teacher (2).cpp  teacher.cpp  test.cpp  ui.cpp
src/ui/test/: test.cpp
src/ui/test_menu/: student.cpp  teacher.cpp
src/ui/test_selector/: student.cpp  teacher.cpp  test_selector.cpp
tests/: database_test.txt  database_test_unittest.cpp  main.cpp  (+5 more)
(+21 files in other folders)
